Fixing display on small-width screens

--- a/css/base.css
+++ b/css/base.css
@@ -47,7 +47,7 @@ h1, h2, h3, h4, h5, h6 {
 h1 {
     text-align: center;
     margin: 0px auto;
-    width: 25%;
+    width: 33.3%;
     font-size: 400%;
 }
 
